<resources>
    <string name="app_name" translatable="false">Simply Password</string>
    <string name="chargerText">Charger</string>
    <string name="dechiffrerText">Déchifrer!</string>
    <string name="motDePasseText">Mot de passe du fichier :</string>
    <string name="erreur_dechiffrement">Erreur lors du déchiffrement du fichier</string>
    <string name="erreur_mauvais_mdp">Mauvais mot de passe</string>
    <string name="recherchertext">Rechercher</string>
    <string name="dossierRacineText">Dossier Racine</string>
    <string name="LoginText">Identifiants</string>
    <string name="siteWebText">Site Web :</string>
    <string name="motDePasseBis">Mot de passe :</string>
    <string name="commentaireText">Commentaire :</string>
    <string name="copierLoginText">Copier le login en mémoire</string>
    <string name="copierMdpText">Copier le mot de passe en mémoire</string>
    <string name="afficherMdpText">Afficher le mot de passe</string>
</resources>
