<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_consulter_mot_de_passe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fr.quintipio.simplyPassword.controller.ConsulterMotDePasse">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:id="@+id/consulterMdpTitreTextView" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:textAlignment="center" android:textStyle="normal|bold"
            android:textAllCaps="false" android:textSize="24sp"/>
    <TextView
            android:text="@string/LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/consulterMdpTitreTextView"
            android:layout_alignParentStart="true" android:layout_marginTop="44dp" android:id="@+id/textLoginTextView"/>
    <TextView
            android:id="@+id/consulterMdpLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/consulterMdpTitreTextView"
            android:layout_alignBaseline="@+id/textLoginTextView"
            android:layout_alignParentEnd="true" android:text="testù" android:textColor="@android:color/black"
            android:textAlignment="center" android:textStyle="normal|bold"
            android:layout_toEndOf="@+id/textCommentaireTextView"/>

    <TextView
            android:text="@string/motDePasseBis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/copyLoginButton"
            android:layout_alignParentStart="true" android:layout_marginTop="12dp" android:id="@+id/textMdpTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:id="@+id/consulterMdpMdpTextView"
            android:layout_toRightOf="@+id/textMdpTextView"
            android:layout_below="@+id/copyLoginButton"
            android:layout_alignBaseline="@+id/textMdpTextView"
            android:layout_alignParentEnd="true" android:text="test" android:textStyle="normal|bold"
            android:textAlignment="center" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/siteWebText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/copyMdpButton"
            android:layout_alignParentStart="true" android:layout_marginTop="21dp" android:id="@+id/textWebTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/consulterMdpSiteTextView"
            android:layout_below="@+id/copyMdpButton"
            android:layout_alignBaseline="@+id/textWebTextView"
            android:layout_alignParentEnd="true" android:textStyle="normal|bold" android:textAlignment="center"
            android:textColor="@android:color/black" android:text="test"
            android:layout_alignStart="@+id/copyLoginButton"/>
    <TextView
            android:text="@string/commentaireText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/textWebTextView"
            android:layout_alignParentStart="true" android:layout_marginTop="20dp" android:id="@+id/textCommentaireTextView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/consulterMdpCommentaireTextView"
            android:textAlignment="center" android:textStyle="normal|bold"
            android:textColor="@android:color/black" android:text="test"
            android:layout_alignBaseline="@+id/textCommentaireTextView"
            android:layout_alignBottom="@+id/textCommentaireTextView" android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/consulterMdpMdpTextView"/>
    <Button
            android:text="@string/copierLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyLoginButton"
            android:layout_below="@+id/consulterMdpLoginTextView" android:layout_toEndOf="@+id/textLoginTextView"
            android:layout_marginTop="15dp"/>
    <CheckBox
            android:text="@string/afficherMdpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/afficherMotDePasseCheckBox"
            android:layout_below="@+id/textMdpTextView" android:layout_alignParentStart="true"/>
    <Button
            android:text="@string/copierMdpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyMdpButton"
            android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>


</RelativeLayout>
