<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_charger_fichier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fr.quintipio.simplyPassword.controller.ChargerFichier">

    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_marginTop="22dp" android:id="@+id/fileTextView"
            android:textAlignment="center" android:layout_alignParentEnd="true" android:textSize="14sp"/>
    <Button
            android:text="@string/chargerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/fileTextView"
            android:layout_centerHorizontal="true" android:layout_marginTop="11dp" android:id="@+id/fileButton"
            android:textAlignment="center"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@+id/fileButton"
            android:layout_alignParentStart="true" android:layout_marginTop="33dp" android:id="@+id/MotDePasseFrame"
            android:visibility="invisible">

        <TextView
                android:text="@string/motDePasseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/MotDepasseTextView"
                android:textAlignment="center"/>
        <Button
                android:text="@string/dechiffrerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" android:id="@+id/ChargerButton"
                android:layout_below="@+id/MotDePasseTextField" android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ErreurTextView"
                android:layout_marginTop="22dp" android:layout_below="@+id/ChargerButton"
                android:layout_centerHorizontal="true" android:textStyle="normal|bold" android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"/>

        <EditText
            android:id="@+id/MotDePasseTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/MotDepasseTextView"
            android:ems="10"
            android:inputType="textPassword" />
    </RelativeLayout>
</RelativeLayout>
